--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
-body{
-    background-color: whitesmoke;
-    color: rgb(36, 146, 146);
-    font-size: 30px;
-    font-family: 'Courier New', Courier, monospace;
-}
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+  
